@@ -1,3 +1,7 @@
+2008-10-27  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: add DeleteGlList
+
 2008-10-26  Scott Ellington <scott.ellington@gmail.com> 
 
 	
